hold a reference to offline sync object during call to ProcessNextOperation, r/sr=neil bug 519761